quation in Chinese translate

--- a/public/problems/square-perpendicular-similarity.html
+++ b/public/problems/square-perpendicular-similarity.html
@@ -138,16 +138,16 @@
       <h2 class="page-title">Square Perpendicular Similarity</h2>
     </section>
 
-    <!-- Reformatted Problem Description Section -->
+    <!-- Translated Problem Description Section to Chinese -->
     <section class="problem-description">
-      <h3>Problem Statement</h3>
+      <h3>问题陈述</h3>
       
-      <p>Consider a square ABCD. Let E be the midpoint of side BC. Draw the line segment AE, and construct a perpendicular from point B to this line, meeting it at point G. Extend the line BG, and from point C, draw a perpendicular to this extended line, meeting it at point H and extending to meet AD at point F. Connect points A and H, and also connect points E and H. Extend line EH until it meets side CD at point I.</p>
+      <p>考虑一个正方形ABCD。设E是边BC的中点。绘制线段AE，并从点B作垂线到这条线，交于点G。延长线段BG，然后从点C作垂线到这条延长线，交于点H并延伸至AD于点F。连接点A和H，并连接点E和H。延长线段EH直到它与边CD相交于点I。</p>
       
       <div class="prove-items">
-        <p>Prove the following:</p>
+        <p>证明以下内容：</p>
         <ol>
-          <li>Triangles ABG and BCH are similar.</li>
+          <li>三角形ABG和BCH是相似的。</li>
           <li>AB<sup>2</sup> = AE·BH</li>
           <li>DI/IC = 2</li>
         </ol>
