added javascripts for another problem

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,15 @@
           <p>Explore geometric relationships in a square with perpendicular constructions.</p>
         </div>
       </a>
+      
+      <a href="/problems/semicircle-perpendicular-equality.html" class="problem-card">
+        <div class="card-header">
+          <h3>Semicircle Perpendicular Equality</h3>
+        </div>
+        <div class="card-body">
+          <p>Prove the equality of perpendicular line segments in a semicircle construction.</p>
+        </div>
+      </a>
     </section>
   </main>
   
