new question high scholl in en

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,15 @@
           <p>Prove the equality of perpendicular line segments in a semicircle construction.</p>
         </div>
       </a>
+      
+      <a href="/problems/ellipse-ratio-problem.html" class="problem-card">
+        <div class="card-header">
+          <h3>Ellipse Ratio Problem</h3>
+        </div>
+        <div class="card-body">
+          <p>Explore the constant ratio of distances when a ray from the origin intersects two ellipses.</p>
+        </div>
+      </a>
     </section>
   </main>
   
