--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,15 @@
           <p>Explore the constant ratio of distances when a ray from the origin intersects two ellipses.</p>
         </div>
       </a>
+      
+      <a href="/problems/set-intersection-constraint.html" class="problem-card">
+        <div class="card-header">
+          <h3>Set Intersection Constraint</h3>
+        </div>
+        <div class="card-body">
+          <p>Determine the range of values for ω where the set intersection constraint is satisfied.</p>
+        </div>
+      </a>
     </section>
   </main>
   
