make the Cu completely separated after the reaction

--- a/chemical-reaction/index.html
+++ b/chemical-reaction/index.html
@@ -41,7 +41,7 @@
             <button id="step-button">Step Forward</button>
             <div class="display-options">
                 <label>
-                    <input type="checkbox" id="show-shell-labels" checked> 
+                    <input type="checkbox" id="show-shell-labels"> 
                     Show Shell Labels
                 </label>
             </div>
