add speed control on the top side

--- a/ions/index.html
+++ b/ions/index.html
@@ -37,6 +37,11 @@
                 </select>
             </div>
             
+            <div class="control-group">
+                <label for="speed-control">Electron Speed:</label>
+                <input type="range" id="speed-control" min="0.01" max="1.0" step="0.01" value="0.1">
+            </div>
+            
             <button id="animate-button" class="primary-button">
                 <i class="fas fa-play-circle"></i> Show Ionization
             </button>
